--- a/loopLab/index.html
+++ b/loopLab/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <a href="index.html" class="navbar-brand">LoopLAB</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggle-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
@@ -36,6 +36,61 @@
             </div>
         </div>  
   </nav>
+
+  <!-- Home Section -->
+  <header id="home-section">
+      <div class="dark-overlay">
+          <div class="home-inner container">
+              <div class="row">
+                  <div class="col-lg-8 d-none d-lg-block">
+                      <h1 class="display-4">Build <strong>social</strong> profiles
+                          and gain revenue <strong>profits</strong></h1>
+                      <div class="d-flex">
+                          <div class="p-4 align-self-start">
+                              <i class="fas fa-check fa-2x"></i>
+                          </div>
+                          <div class="p-4 align-self-end">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam architecto consequuntur minus nesciunt sapiente suscipit.</div>
+                      </div>
+                      <div class="d-flex">
+                          <div class="p-4 align-self-start">
+                              <i class="fas fa-check fa-2x"></i>
+                          </div>
+                          <div class="p-4 align-self-end">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam architecto consequuntur minus nesciunt sapiente suscipit.</div>
+                      </div>
+                      <div class="d-flex">
+                          <div class="p-4 align-self-start">
+                              <i class="fas fa-check fa-2x"></i>
+                          </div>
+                          <div class="p-4 align-self-end">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam architecto consequuntur minus nesciunt sapiente suscipit.</div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4">
+                      <div class="card bg-primary text-center card-form">
+                          <div class="card-body">
+                              <h3>Sign Up Today</h3>
+                              <p>Please fill out this form to register</p>
+                              <form>
+                                  <div class="form-group">
+                                      <input type="text" class="form-control form-control-lg" placeholder="Username">
+                                  </div>
+                                  <div class="form-group">
+                                      <input type="email" class="form-control form-control-lg" placeholder="Email">
+                                  </div>
+                                  <div class="form-group">
+                                      <input type="password" class="form-control form-control-lg" placeholder="Password">
+                                  </div>
+                                  <div class="form-group">
+                                      <input type="password" class="form-control form-control-lg" placeholder="Confirm Password">
+                                  </div>
+                                  <input type="submit" value="Submit" class="btn btn-outline-light btn-block">
+                              </form>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </header>
 
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
