--- a/loopLab/index.html
+++ b/loopLab/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap Theme</title>
 </head>
-<body>
+<body data-spy="scroll" data-target="#main-nav" id="home">
   <!-- Start Here -->
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
         <div class="container">
             <a href="index.html" class="navbar-brand">LoopLAB</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -30,7 +30,7 @@
                         <a href="#create-head-section" class="nav-link">Create</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#share-head-share" class="nav-link">Share</a>
+                        <a href="#share-head-section" class="nav-link">Share</a>
                     </li>
                 </ul>
             </div>
@@ -92,12 +92,227 @@
       </div>
   </header>
 
+  <!-- EXPLORE HEAD -->
+  <section id="explore-head-section">
+      <div class="container">
+          <div class="row">
+              <div class="col text-center py-5">
+                 <h1 class="display-4">Explore</h1>
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eaque, eveniet harum iure maiores quae quia repellendus rerum! Architecto, provident.</p>
+                  <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- EXPLORE SECTION -->
+  <section id="explore-section" class="bg-light text-muted py-5">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6">
+                  <img src="images/explore-section1.jpg" alt="" class="img-fluid rounded-circle mb-3">
+              </div>
+              <div class="col-md-6">
+                  <h3>Explore & Connect</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque 
+                      excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                  <div class="d-flex">
+                      <div class="p-4 align-self-start">
+                          <i class="fas fa-check fa-2x"></i>
+                      </div>
+                      <div class="p-4 align-self-end">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque
+                              excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                      </div>
+                  </div>
+                  <div class="d-flex">
+                      <div class="p-4 align-self-start">
+                          <i class="fas fa-check fa-2x"></i>
+                      </div>
+                      <div class="p-4 align-self-end">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque
+                              excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                      </div>
+                  </div>
+                  
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- CREATE HEAD -->
+  <section id="create-head-section" class="bg-primary">
+      <div class="container">
+          <div class="row">
+              <div class="col text-center py-5">
+                  <h1 class="display-4">Create</h1>
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eaque, eveniet harum iure maiores quae quia repellendus rerum! Architecto, provident.</p>
+                  <a href="#" class="btn btn-outline-light">Find Out More</a>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- CREATE SECTION -->
+  <section id="create-section" class="py-5">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6 order-2">
+                  <img src="images/create-section1.jpg" alt="" class="img-fluid rounded-circle mb-3">
+              </div>
+              <div class="col-md-6 order-1">
+                  <h3>Create Your Passion</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque
+                      excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                  <div class="d-flex">
+                      <div class="p-4 align-self-start">
+                          <i class="fas fa-check fa-2x"></i>
+                      </div>
+                      <div class="p-4 align-self-end">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque
+                              excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                      </div>
+                  </div>
+                  <div class="d-flex">
+                      <div class="p-4 align-self-start">
+                          <i class="fas fa-check fa-2x"></i>
+                      </div>
+                      <div class="p-4 align-self-end">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque
+                              excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                      </div>
+                  </div>
+
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- SHARE HEAD -->
+  <section id="share-head-section" class="bg-primary">
+      <div class="container">
+          <div class="row">
+              <div class="col text-center py-5">
+                  <h1 class="display-4">Share</h1>
+                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eaque, eveniet harum iure maiores quae quia repellendus rerum! Architecto, provident.</p>
+                  <a href="#" class="btn btn-outline-light">Find Out More</a>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- SHARE SECTION -->
+  <section id="share-section" class="bg-light text-muted py-5">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-6">
+                  <img src="images/share-section1.jpg" alt="" class="img-fluid rounded-circle mb-3">
+              </div>
+              <div class="col-md-6">
+                  <h3>Share what your create</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque
+                      excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                  <div class="d-flex">
+                      <div class="p-4 align-self-start">
+                          <i class="fas fa-check fa-2x"></i>
+                      </div>
+                      <div class="p-4 align-self-end">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque
+                              excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                      </div>
+                  </div>
+                  <div class="d-flex">
+                      <div class="p-4 align-self-start">
+                          <i class="fas fa-check fa-2x"></i>
+                      </div>
+                      <div class="p-4 align-self-end">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque corporis dolore doloremque
+                              excepturi expedita molestiae nam obcaecati quaerat vel vero.</p>
+                      </div>
+                  </div>
+
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer id="main-footer" class="bg-dark">
+      <div class="container">
+          <div class="row">
+              <div class="col text-center py-4">
+                  <h3>LoopLAB</h3>
+                  <p>Copyright &copy; <span id="year"></span></p>
+                  <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">
+                      Contact Us
+                  </button>
+              </div>
+          </div>
+      </div>
+  </footer>
+
+  <!-- CONTACT MODAL -->
+  <div id="contactModal" class="modal fade text-dark">
+    <div class="modal-dialog">
+       <div class="modal-content">
+           <div class="modal-header">
+               <h5 class="modal-title">Contact Us</h5>
+               <button class="close" data-dismiss="modal">
+                   <span>&times;</span>
+               </button>
+           </div>
+           <div class="modal-body">
+               <form>
+                 <div class="form-group">
+                     <label for="name">Name</label>
+                     <input type="text" class="form-control">
+                 </div>
+                   <div class="form-group">
+                       <label for="email">Email</label>
+                       <input type="text" class="form-control">
+                   </div>
+                   <div class="form-group">
+                       <label for="message">Message</label>
+                       <textarea class="form-control"></textarea>
+                   </div>
+                   <div class="modal-footer">
+                       <button class="btn btn-primary btn-block">Submit</button>
+                   </div>
+               </form>
+           </div>
+       </div>
+    </div>
+  </div>
+
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
+
+    // Init scroll spy (set nav bar links active)
+    $('body').scrollspy({ target: '#main-nav' });
+
+    // add smooth scrolling
+    $('#main-nav a').on('click', function (e) {
+        // check for a hash value
+        if(this.hash !== ''){
+            // prevent default behaviour
+            e.preventDefault();
+
+            // store hash
+            const hash = this.hash;
+
+            // Animate smooth scroll
+            $('html, body').animate({
+                scrollTop: $(hash).offset().top
+            }, 800, function() {
+                // add hash to URL after scroll
+                window.location.hash = hash;
+            })
+        }
+    });
 </script>
 </body>
 </html>
