--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -11,7 +11,36 @@
     <title>Bootstrap Theme</title>
 </head>
 <body>
-  <!-- Start Here -->
+  <!-- START HERE -->
+  <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
+      <div class="container">
+          <a href="#home" class="navbar-brand">
+              <img src="img/mlogo.png" width="50" height="50" alt="">
+              <h3 class="d-inline align-middle">Mizure</h3>
+          </a>
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="#home" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#authors" class="nav-link">Meet the authors</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link">Contact</a>
+                </li>
+            </ul>
+          </div>
+
+      </div>
+  </nav>
+
 
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
