--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -64,8 +64,22 @@
   </section>
 
   <!-- NEWSLETTER -->
-  <section id="newletter" class="bg-dark text-white py-5">
-
+  <section id="newsletter" class="bg-dark text-white py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <input type="text" class="form-control form-control-lg" placeholder="Enter Name">
+            </div>
+            <div class="col-md-4">
+                <input type="email" class="form-control form-control-lg" placeholder="Enter Email">
+            </div>
+            <div class="col-md-4">
+                <button class="btn btn-primary btn-lg btn-block">
+                    <i class="fas fas-envelope-open-o">Subscribe</i>
+                </button>
+            </div>
+        </div>
+    </div>
   </section>
 
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
