--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -68,10 +68,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <input type="text" class="form-control form-control-lg" placeholder="Enter Name">
+                <input type="text" class="form-control form-control-lg mb-resp" placeholder="Enter Name">
             </div>
             <div class="col-md-4">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter Email">
+                <input type="email" class="form-control form-control-lg mb-resp" placeholder="Enter Email">
             </div>
             <div class="col-md-4">
                 <button class="btn btn-primary btn-lg btn-block">
@@ -80,6 +80,46 @@
             </div>
         </div>
     </div>
+  </section>
+
+  <!-- BOXES -->
+  <section id="boxes" class="py-5">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-3">
+                  <div class="card text-center border-primary mb-resp">
+                      <div class="card-body">
+                          <h3 class="text-primary">Be Better</h3>
+                          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, dignissimos?</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3">
+                  <div class="card text-center bg-primary text-white mb-resp">
+                      <div class="card-body">
+                          <h3 class="text-white">Be Smarter</h3>
+                          <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, dignissimos?</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3">
+                  <div class="card text-center border-primary mb-resp">
+                      <div class="card-body">
+                          <h3 class="text-primary">Be Faster</h3>
+                          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, dignissimos?</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-3">
+                  <div class="card text-center bg-primary text-white">
+                      <div class="card-body">
+                          <h3 class="text-white">Be Stronger</h3>
+                          <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, dignissimos?</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
   </section>
 
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
