--- a/glozzom/index.html
+++ b/glozzom/index.html
@@ -89,12 +89,116 @@
       </div>
   </section>
 
+  <!-- HOME ICON SECTION -->
+  <section id="home-icons" class="py-5">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4 mb-4 text-center">
+                  <i class="fas fa-cog fa-3x mb-2"></i>
+                  <h3>Turning Gears</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, assumenda.</p>
+              </div>
+              <div class="col-md-4 mb-4 text-center">
+                  <i class="fas fa-cloud fa-3x mb-2"></i>
+                  <h3>Sending Data</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, assumenda.</p>
+              </div>
+              <div class="col-md-4 mb-4 text-center">
+                  <i class="fas fa-cart-plus fa-3x mb-2"></i>
+                  <h3>Making Money</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, assumenda.</p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- HOME HEADING SECTION -->
+  <section id="home-heading" class="p-5">
+     <div class="dark-overlay">
+         <div class="row">
+             <div class="col">
+                 <div class="container pt-5">
+                     <h1>Are You Ready To Get Started?</h1>
+                     <p class="d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam consequuntur dicta nesciunt nulla, obcaecati perspiciatis ut vel velit veniam voluptates!</p>
+                 </div>
+             </div>
+         </div>
+     </div>
+  </section>
+
+  <!-- INFO SECTION -->
+  <section id="info" class="py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 align-self-center">
+                <h3>Lorem Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore et magnam officia? Debitis deleniti fugit itaque, minus possimus voluptatem voluptatum!</p>
+                <a href="about.html" class="btn btn-outline-danger btn-lg">Learn More</a>
+            </div>
+            <div class="col-md-6">
+                <img src="img/laptop.png" alt="" class="img-fluid">
+            </div>
+        </div>
+    </div>
+  </section>
+
+  <!-- VIDEO PLAY -->
+  <section id="video-play">
+      <div class="dark-overlay">
+          <div class="row">
+              <div class="col">
+                  <div class="container p-5">
+                      <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA"
+                      data-toggle="modal" data-target="#videoModal">
+                          <i class="fas fa-play fa-3x"></i>
+                      </a>
+                      <h1>See What We Do</h1>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- VIDEO MODAL -->
+  <div class="modal fade" id="videoModal">
+     <div class="modal-dialog">
+         <div class="modal-content">
+             <div class="modal-body">
+                 <button class="close" data-dismiss="modal">
+                     <span>&times;</span>
+                 </button>
+                 <iframe src="" frameborder="0" height="350" width="100%" allowfullscreen></iframe>
+             </div>
+         </div>
+     </div>
+  </div>
+
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
+
+    // configure slider
+    $('.carousel').carousel({
+      interval: 6000,
+      pause: 'hover'
+    });
+
+    // Video Play
+    $(function () {
+        // Auto play modal video
+        $(".video").click(function () {
+            var theModal = $(this).data("target"),
+                videoSRC = $(this).attr("data-video"),
+                videoSRCauto = videoSRC + "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1";
+            $(theModal + ' iframe').attr('src', videoSRCauto);
+            $(theModal + ' button.close').click(function () {
+                $(theModal + ' iframe').attr('src', videoSRC);
+            });
+        });
+    });
 </script>
 </body>
 </html>
