--- a/glozzom/index.html
+++ b/glozzom/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap Theme</title>
 </head>
@@ -159,6 +160,87 @@
       </div>
   </section>
 
+  <!-- PHOTO GALLERY -->
+  <section id="gallery" class="py-5">
+     <div class="container">
+         <h1 class="text-center">Photo Gallery</h1>
+         <p class="text-center">Check out our Photo</p>
+         <div class="row mb-4">
+             <div class="col-md-4">
+                 <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery"
+                 data-height="560" data-width="560">
+                     <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid">
+                 </a>
+             </div>
+
+             <div class="col-md-4">
+                 <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery"
+                    data-height="561" data-width="561">
+                     <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid">
+                 </a>
+             </div>
+
+             <div class="col-md-4">
+                 <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery"
+                    data-height="562" data-width="562">
+                     <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid">
+                 </a>
+             </div>
+         </div>
+         <div class="row mb-4">
+             <div class="col-md-4">
+                 <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox" data-gallery="img-gallery"
+                    data-height="563" data-width="563">
+                     <img src="https://source.unsplash.com/random/563x563" alt="" class="img-fluid">
+                 </a>
+             </div>
+
+             <div class="col-md-4">
+                 <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox" data-gallery="img-gallery"
+                    data-height="564" data-width="564">
+                     <img src="https://source.unsplash.com/random/564x564" alt="" class="img-fluid">
+                 </a>
+             </div>
+
+             <div class="col-md-4">
+                 <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery"
+                    data-height="565" data-width="565">
+                     <img src="https://source.unsplash.com/random/565x565" alt="" class="img-fluid">
+                 </a>
+             </div>
+         </div>
+     </div>
+  </section>
+
+  <!-- NEWS LETTER -->
+  <section id="newletter" class="text-center p-5 bg-dark text-white">
+      <div class="container">
+          <div class="row">
+              <div class="col">
+                  <h1>Sign Up For Our Newletter</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda consequatur dignissimos eligendi magni nulla porro quas quibusdam rem repellat, saepe!</p>
+                  <form class="form-inline justify-content-center">
+                      <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Name">
+                      <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Email">
+                      <button class="btn btn-primary mb-2">Submit</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer id="main-footer" class="text-center p-4">
+      <div class="container">
+          <div class="row">
+              <div class="col">
+                  <p>Copyright &copy;
+                      <span id="year"></span> Glozzom</p>
+              </div>
+          </div>
+      </div>
+  </footer>
+
   <!-- VIDEO MODAL -->
   <div class="modal fade" id="videoModal">
      <div class="modal-dialog">
@@ -176,6 +258,7 @@
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
 <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
@@ -184,6 +267,12 @@
     $('.carousel').carousel({
       interval: 6000,
       pause: 'hover'
+    });
+
+    // Lightbox Init
+    $(document).on('click', '[data-toggle="lightbox"]', function (event) {
+        event.preventDefault();
+        $(this).ekkoLightbox();
     });
 
     // Video Play
