--- a/settingUp/test.html
+++ b/settingUp/test.html
@@ -3,9 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <style>
+        .row {
+            border: solid 1px black;
+        }
+
+        .container {
+            border: solid 1px blue;
+        }
+    </style>
 </head>
 <body>
+  <nav id="main-nav" class="navbar navbar-expand-sm navbar-dark bg-dark">
+      <div class="container">
+          <a href="#" class="navbar-brand">Company Title or Logo</a>
+          <div>
+              <form>
+                  <div class="input-group input-group-sm p-2">
+                      <input type="text" class="form-control" placeholder="Name">
+                      <div class="input-group-append">
+                          <input type="submit" value="Submit" class="btn btn-primary btn-block btn-sm">
+                      </div>
+                  </div>
+              </form>
+          </div>
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="navbarCollapse" class="collapse navbar-collapse">
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item active">
+                      <form>
+                          <div class="input-group input-group-sm p-2">
+                              <input type="text" class="form-control" placeholder="Name">
+                              <div class="input-group-append">
+                                  <input type="submit" value="Submit" class="btn btn-primary btn-block btn-sm">
+                              </div>
+                          </div>
+                      </form>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#" class="nav-link">About</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#" class="nav-link">Services</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#" class="nav-link">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#" class="nav-link">Contact</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+  </nav>
   <!-- Use emmet where possible -->
   <h1>Hello World!</h1>
+
+  <section id="section1" class="py-5">
+    <div class="row">
+        <div class="container">
+            <div class="col-md-4 mb-4 text-center">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, sit!</p>
+            </div>
+            <div class="col-md-4 mb-4 text-center">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, sit!</p>
+            </div>
+        </div>
+    </div>
+  </section>
+
+  <section id="section2" class="py-5">
+      <div class="container p-2">
+          <div class="row">
+              <div class="col-md-4 mb-4 text-center">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, sit!</p>
+              </div>
+              <div class="col-md-4 mb-4 text-center">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, sit!</p>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
 </html>
