--- a/glozzom/about.html
+++ b/glozzom/about.html
@@ -77,29 +77,35 @@
         <div class="row mb-4">
             <div class="col-md-4">
                 <div class="card bg-danger text-white text-center">
+                    <a href="index.html" class="card-link">
                     <div class="card-body">
                         <i class="fas fa-building fa-3x"></i>
                         <h3>Sample Heading</h3>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, unde.
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, unde.</p>
                     </div>
+                    </a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card bg-dark text-white text-center">
+                    <a href="index.html" class="card-link">
                     <div class="card-body">
                         <i class="fas fa-bullhorn fa-3x"></i>
                         <h3>Sample Heading</h3>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, unde.
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, unde.</p>
                     </div>
+                    </a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card bg-danger text-white text-center">
+                    <a href="index.html" class="card-link">
                     <div class="card-body">
                         <i class="fas fa-comments fa-3x"></i>
                         <h3>Sample Heading</h3>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, unde.
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, unde.</p>
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
