working on new project glozzom, which has video play, light box and other cool features

--- a/glozzom/blog.html
+++ b/glozzom/blog.html
@@ -31,8 +31,8 @@
                 <li class="nav-item">
                     <a href="services.html" class="nav-link">Services</a>
                 </li>
-                <li class="nav-item">
-                    <a href="blog.html active" class="nav-link">Blog</a>
+                <li class="nav-item active">
+                    <a href="blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link">Contact</a>
@@ -41,6 +41,70 @@
         </div>
     </div>
 </nav>
+
+<!-- BLOG SECTION -->
+<section id="blog" class="py-3">
+  <div class="container">
+      <div class="row">
+          <div class="card-columns">
+             <div class="card">
+                 <img src="https://source.unsplash.com/random/300x200" alt="" class="img-fluid card-img-top">
+                 <div class="card-body">
+                     <h4 class="card-title">Blog Post One</h4>
+                     <small class="text-muted">Written by Paul on 20/05/2018</small>
+                     <hr>
+                     <p class="card-text text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi corporis dolorem est, expedita hic id, impedit itaque laboriosam nesciunt nulla quaerat qui quibusdam quis quod sapiente sed, similique sit.</p>
+                 </div>
+             </div>
+              <div class="card p-3">
+                  <blockquote class="card-blockquote card-body">
+                      <p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea esse harum incidunt sed sint tenetur.</p>
+                      <footer class="blockquote-footer">
+                          <small class="text-muted">Someone Famous in <cite title="Source Title">Source Title</cite></small>
+                      </footer>
+                  </blockquote>
+              </div>
+
+              <div class="card">
+                  <img src="https://source.unsplash.com/random/301x200" alt="" class="img-fluid card-img-top">
+                  <div class="card-body">
+                      <h4 class="card-title">Blog Post Two</h4>
+                      <small class="text-muted">Written by Lorraine on 22/05/2018</small>
+                      <hr>
+                      <p class="card-text text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi corporis dolorem est, expedita hic id, impedit itaque laboriosam nesciunt nulla quaerat qui quibusdam quis quod sapiente sed, similique sit.</p>
+                  </div>
+              </div>
+              <div class="card p-3 bg-danger text-white">
+                  <blockquote class="card-blockquote card-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea esse harum incidunt sed sint tenetur.</p>
+                      <footer class="blockquote-footer">
+                          <small class="text-white">Someone Famous in <cite title="Source Title">Source Title</cite></small>
+                      </footer>
+                  </blockquote>
+              </div>
+
+              <div class="card">
+                  <img src="https://source.unsplash.com/random/302x200" alt="" class="img-fluid card-img-top">
+                  <div class="card-body">
+                      <h4 class="card-title">Blog Post Three</h4>
+                      <small class="text-muted">Written by Dominic on 23/05/2018</small>
+                      <hr>
+                      <p class="card-text text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi corporis dolorem est, expedita hic id, impedit itaque laboriosam nesciunt nulla quaerat qui quibusdam quis quod sapiente sed, similique sit.</p>
+                  </div>
+              </div>
+              <div class="card p-3">
+                  <blockquote class="card-blockquote card-body">
+                      <p class="text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea esse harum incidunt sed sint tenetur.</p>
+                      <footer class="blockquote-footer">
+                          <small class="text-muted">Someone Famous in <cite title="Source Title">Source Title</cite></small>
+                      </footer>
+                  </blockquote>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+
 
 <!-- PAGE HEADER -->
 <header id="page-header">
