finished glozzom, now working blogen a admin GUI web page

--- a/blogen/index.html
+++ b/blogen/index.html
@@ -92,9 +92,7 @@
   </section>
 
 
-
-
-  <!-- MODALS -->
+  <!-- MODALS - POST, CATEGORY and USER -->
   <div class="modal fade" id="addPostModal">
       <div class="modal-dialog modal-lg">
           <div class="modal-content">
